fixed one routing issue

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <p>
             BB School is the finest school in all the realm.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Sign up here &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://localhost:44362/Student/Create">Sign up here &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Learn to Fight</h2>
